name:                appel
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/lozord/appel#readme
--license:             TODO
--license-file:        TODO
--author:              TODO
--maintainer:          TODO
--copyright:           2016 TODO
category:            Other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , matrix == 0.3.4.4
                     , vector == 0.11.0.0
                     , random == 1.1
  default-language:    Haskell2010

executable appel-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , appel
  default-language:    Haskell2010

test-suite appel-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , appel
                     , QuickCheck >= 2.8 && < 3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zthomae/appel
